# Personal-AI-Employee-FTEs

./: .env.example  .gitignore  CLAUDE.md  README.md  mcp.json  pyproject.toml
.claude/hooks/: stop_hook.py
.claude/skills/generate-briefing/: skill.md
.claude/skills/process-inbox/: skill.md
.claude/skills/triage-email/: skill.md
scripts/: setup_vault.py
src/: orchestrator.py  retry_handler.py  watchdog_monitor.py
src/watchers/: __init__.py  base_watcher.py  filesystem_watcher.py  gmail_watcher.py
tests/: test_base_watcher.py  test_orchestrator.py  test_retry_handler.py  test_stop_hook.py
